--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     </head>
 
     <body>
+        <a href="index.html">Главная</a>
+        <a href="./info/about.html">Обо мне</a>
         <h1>
             Моя первая HTML страница!
         </h1>
